--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-_Win7KinectAreaTriggers.application.windows32.v1..zip
 _Win7KinectAreaTriggers.application.windows32
-notes.md
-osc-client-server.rb
+_Win7KinectAreaTriggers.application.windows32.zip
